--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container header-container">
         <div class="logo">
           <i class="fas fa-balance-scale"></i>
-          <span class="logo-text">Johnson & Asociados</span>
+          <span class="logo-text">Estudio Jurídico Cardeilhac</span>
         </div>
         <nav class="main-nav">
           <a href="#services" class="nav-link">Servicios</a>
@@ -23,7 +23,6 @@
           <a href="#attorneys" class="nav-link">Nuestros Abogados</a>
           <a href="#contact" class="nav-link">Contacto</a>
         </nav>
-        <button class="btn primary-btn desktop-only">Consulta Gratuita</button>
         <button class="btn outline-btn mobile-only menu-btn">
           <i class="fas fa-chevron-right"></i>
           <span class="sr-only">Menú</span>
@@ -37,13 +36,12 @@
         <div class="container">
           <div class="hero-grid">
             <div class="hero-content">
-              <h1 class="hero-title">Representación Legal Experta en la que Puede Confiar</h1>
+              <h1 class="hero-title">Representación Legal con Expertiz en la que Puede Confiar</h1>
               <p class="hero-text">
-                Con más de 25 años de experiencia, nuestro equipo de abogados dedicados está comprometido a proporcionar servicios legales excepcionales y lograr los mejores resultados posibles para nuestros clientes.
+                Con más de 25 años de experiencia, nuestro equipo de abogados está comprometido a proporcionar servicios legales excepcionales y lograr los mejores resultados para nuestros clientes.
               </p>
               <div class="hero-buttons">
                 <button class="btn primary-btn btn-lg">Programar una Consulta</button>
-                <button class="btn outline-btn btn-lg">Más Información</button>
               </div>
             </div>
             <div class="hero-image">
