--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Johnson & Asociados - Bufete de Abogados</title>
+  <title>Estudio Jurídico Cardeilhac</title>
   <link rel="stylesheet" href="styles.css">
   <!-- Incluir Font Awesome para los iconos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -57,7 +57,7 @@
           <div class="section-header">
             <h2 class="section-title">Nuestras Áreas de Práctica</h2>
             <p class="section-description">
-              Ofrecemos servicios legales integrales en una amplia gama de áreas de práctica para satisfacer todas sus necesidades legales.
+              Ofrecemos servicios legales integrales en una amplia gama de áreas de práctica para satisfacer sus necesidades legales.
             </p>
           </div>
           <div class="services-grid">
@@ -65,8 +65,8 @@
               <div class="service-icon">
                 <i class="fas fa-building"></i>
               </div>
-              <h3 class="service-title">Derecho Corporativo</h3>
-              <p class="service-description">Orientación experta para empresas de todos los tamaños en formación, cumplimiento y transacciones.</p>
+              <h3 class="service-title">Asuntos Civiles</h3>
+              <p class="service-description">Orientación experta para personas en formación, transacciones y cumplimiento del derecho civil.</p>
             </div>
             <div class="service-card">
               <div class="service-icon">
@@ -79,8 +79,8 @@
               <div class="service-icon">
                 <i class="fas fa-users"></i>
               </div>
-              <h3 class="service-title">Derecho Familiar</h3>
-              <p class="service-description">Asesoramiento compasivo para divorcios, custodia y otros asuntos legales relacionados con la familia.</p>
+              <h3 class="service-title">Defensa Penal</h3>
+              <p class="service-description">Asesoramiento, custodia y otros asuntos legales relacionados</p>
             </div>
           </div>
         </div>
@@ -96,12 +96,11 @@
             <div class="about-content">
               <h2 class="about-title">Sobre Nuestra Firma</h2>
               <p class="about-text">
-                Fundada en 1995, Johnson & Asociados ha crecido hasta convertirse en uno de los bufetes de abogados más respetados de la región. Nuestro equipo de abogados experimentados está dedicado a proporcionar servicios legales personalizados con integridad y excelencia.
+                Fundada en 1995, Estudio Jurídico Cardeilhac ha crecido hasta convertirse en un bufet de abogados respetados de la región. Nuestro equipo de abogados experimentados está dedicado a proporcionar servicios legales personalizados con integridad y excelencia.
               </p>
               <p class="about-text">
                 Nos enorgullecemos de nuestro compromiso con nuestros clientes, nuestra participación en la comunidad y nuestro historial de resultados exitosos incluso en los asuntos legales más complejos.
               </p>
-              <button class="btn primary-btn">Conoce a Nuestro Equipo</button>
             </div>
           </div>
         </div>
