--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Johnson & Asociados - Bufete de Abogados</title>
+  <title>Estudio Juridico Cardeilhac</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
       <div class="container flex h-16 items-center justify-between px-4 md-px-6">
         <div class="flex items-center gap-2">
           <i class="ri-scales-3-line h-6 w-6 text-white"></i>
-          <span class="text-xl font-bold">Johnson & Asociados</span>
+          <span class="text-xl font-bold">Estudio Juridico Cardeilhac</span>
         </div>
         <nav class="hidden md-flex gap-6">
           <a href="#services" class="text-sm font-medium text-white hover-underline underline-offset-4">
