--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             Contacto
           </a>
         </nav>
-        <a href="#contact" class="button hidden md-inline-flex bg-white text-primary hover-bg-gray-100">Consulta Gratuita</a>
+        <a href="#contact" class="button hidden md-inline-flex bg-white text-primary hover-bg-gray-100">Agenda una Consulta </a>
         <button class="button-outline md-hidden border-white text-white hover-bg-primary-light">
           <i class="ri-arrow-right-s-line h-4 w-4"></i>
           <span class="sr-only">Menú</span>
@@ -45,11 +45,11 @@
           <div class="grid gap-6 lg-grid-cols-2 lg-gap-12 items-center">
             <div class="space-y-4">
               <h1 class="text-3xl font-bold tracking-tighter sm-text-4xl md-text-5xl">
-                Representación Legal Experta en la que Puede Confiar
+                Representación Legal en la que Puedes Confiar
               </h1>
               <p class="text-gray-500 md-text-xl lg-text-base xl-text-xl">
-                Con más de 25 años de experiencia, nuestro equipo de abogados dedicados está comprometido a
-                proporcionar servicios legales excepcionales y lograr los mejores resultados posibles para nuestros
+                Con más de 25 años de experiencia, nuestro equipo de abogados está comprometido a
+                proporcionar servicios legales excepcionales y lograr los mejores resultados para nuestros
                 clientes.
               </p>
               <div class="flex flex-col gap-2 min-400-flex-row">
@@ -76,7 +76,7 @@
                 Nuestras Áreas de Práctica
               </h2>
               <p class="max-w-900 text-gray-500 md-text-xl lg-text-base xl-text-xl">
-                Ofrecemos servicios legales integrales en una amplia gama de áreas de práctica para satisfacer todas
+                Ofrecemos servicios legales en una amplia gama de áreas de práctica para satisfacer todas
                 sus necesidades legales.
               </p>
             </div>
@@ -85,7 +85,7 @@
             <div class="card text-center p-6">
               <div class="card-content pt-6">
                 <div class="flex justify-center">
-                  <i class="ri-building-line h-10 w-10 mb-4 text-gray-800"></i>
+                  <i class="ri-building-line h-10 w-10 mb-4 text-gray-999"></i>
                 </div>
                 <h3 class="text-xl font-bold mb-2">Derecho Corporativo</h3>
                 <p class="text-gray-500">
