--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
       </section>
 
-      <!-- Services Section -->
+     <!-- Services Section -->
       <section id="services" class="w-full py-12 md-py-24 lg-py-32">
         <div class="container px-4 md-px-6">
           <div class="flex flex-col items-center justify-center space-y-4 text-center">
@@ -76,7 +76,7 @@
                 Nuestras Áreas de Práctica
               </h2>
               <p class="max-w-900 text-gray-500 md-text-xl lg-text-base xl-text-xl">
-                Ofrecemos servicios legales en una amplia gama de áreas de práctica para satisfacer todas
+                Ofrecemos servicios legales integrales en una amplia gama de áreas de práctica para satisfacer todas
                 sus necesidades legales.
               </p>
             </div>
@@ -85,7 +85,7 @@
             <div class="card text-center p-6">
               <div class="card-content pt-6">
                 <div class="flex justify-center">
-                  <i class="ri-building-line h-10 w-10 mb-4 text-gray-999"></i>
+                  <i class="ri-building-line h-10 w-10 mb-4 text-gray-800"></i>
                 </div>
                 <h3 class="text-xl font-bold mb-2">Derecho Corporativo</h3>
                 <p class="text-gray-500">
@@ -96,7 +96,7 @@
             <div class="card text-center p-6">
               <div class="card-content pt-6">
                 <div class="flex justify-center">
-                  <i class="ri-briefcase-line h-10 w-10 mb-4 text-gray-800"></i>
+                  <i class="ri-briefcase-line h-16 w-16 mb-4 text-gray-800"></i>
                 </div>
                 <h3 class="text-xl font-bold mb-2">Litigios</h3>
                 <p class="text-gray-500">
@@ -285,4 +285,3 @@
   </div>
 </body>
 </html>
-
