--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Estudio Juridico Cardeilhac</title>
+  <title>Johnson & Asociados - Bufete de Abogados</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
       <div class="container flex h-16 items-center justify-between px-4 md-px-6">
         <div class="flex items-center gap-2">
           <i class="ri-scales-3-line h-6 w-6 text-white"></i>
-          <span class="text-xl font-bold">Estudio Juridico Cardeilhac</span>
+          <span class="text-xl font-bold">Johnson & Asociados</span>
         </div>
         <nav class="hidden md-flex gap-6">
           <a href="#services" class="text-sm font-medium text-white hover-underline underline-offset-4">
@@ -30,7 +30,7 @@
             Contacto
           </a>
         </nav>
-        <a href="#contact" class="button hidden md-inline-flex bg-white text-primary hover-bg-gray-100">Agenda una Consulta </a>
+        <a href="#contact" class="button hidden md-inline-flex bg-white text-primary hover-bg-gray-100">Consulta Gratuita</a>
         <button class="button-outline md-hidden border-white text-white hover-bg-primary-light">
           <i class="ri-arrow-right-s-line h-4 w-4"></i>
           <span class="sr-only">Menú</span>
@@ -45,11 +45,11 @@
           <div class="grid gap-6 lg-grid-cols-2 lg-gap-12 items-center">
             <div class="space-y-4">
               <h1 class="text-3xl font-bold tracking-tighter sm-text-4xl md-text-5xl">
-                Representación Legal en la que Puedes Confiar
+                Representación Legal Experta en la que Puede Confiar
               </h1>
               <p class="text-gray-500 md-text-xl lg-text-base xl-text-xl">
-                Con más de 25 años de experiencia, nuestro equipo de abogados está comprometido a
-                proporcionar servicios legales excepcionales y lograr los mejores resultados para nuestros
+                Con más de 25 años de experiencia, nuestro equipo de abogados dedicados está comprometido a
+                proporcionar servicios legales excepcionales y lograr los mejores resultados posibles para nuestros
                 clientes.
               </p>
               <div class="flex flex-col gap-2 min-400-flex-row">
@@ -67,7 +67,7 @@
         </div>
       </section>
 
-     <!-- Services Section -->
+      <!-- Services Section -->
       <section id="services" class="w-full py-12 md-py-24 lg-py-32">
         <div class="container px-4 md-px-6">
           <div class="flex flex-col items-center justify-center space-y-4 text-center">
@@ -285,3 +285,4 @@
   </div>
 </body>
 </html>
+
