--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Johnson & Asociados - Bufete de Abogados</title>
+  <title>Estudio Jurídico Cardeilhac</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="logo">
           <i class="ri-scales-3-line"></i>
-          <span>Johnson & Asociados</span>
+          <span>Estudio Jurídico Cardeilhac</span>
         </div>
         <nav class="main-nav">
           <a href="#services">Servicios</a>
@@ -22,7 +22,7 @@
           <a href="#attorneys">Nuestros Abogados</a>
           <a href="#contact">Contacto</a>
         </nav>
-        <a href="#contact" class="btn btn-white">Consulta Gratuita</a>
+        <a href="#contact" class="btn btn-white">Agenda una Consulta</a>
         <button class="menu-toggle">
           <i class="ri-menu-line"></i>
           <span class="sr-only">Menú</span>
@@ -36,10 +36,10 @@
         <div class="container">
           <div class="hero-content">
             <div class="hero-text">
-              <h1>Representación Legal Experta en la que Puede Confiar</h1>
+              <h1>Representación Legal en la que Pueded Confiar</h1>
               <p>
-                Con más de 25 años de experiencia, nuestro equipo de abogados dedicados está comprometido a
-                proporcionar servicios legales excepcionales y lograr los mejores resultados posibles para nuestros
+                Con más de 25 años de experiencia, nuestros de abogados están comprometidos a
+                proporcionar servicios legales y lograr los mejores resultados para nuestros
                 clientes.
               </p>
               <div class="hero-cta">
@@ -60,9 +60,9 @@
       <section id="services" class="services">
         <div class="container">
           <div class="section-header">
-            <h2>Nuestras Áreas de Práctica</h2>
+            <h2>Nuestras Áreas de Práctica Profesional</h2>
             <p>
-              Ofrecemos servicios legales integrales en una amplia gama de áreas de práctica para satisfacer todas
+              Ofrecemos servicios legales integrales en una amplia gama de áreas de práctica para satisfacer      
               sus necesidades legales.
             </p>
           </div>
@@ -71,27 +71,27 @@
               <div class="service-icon">
                 <i class="ri-building-line"></i>
               </div>
-              <h3>Derecho Corporativo</h3>
+              <h3>Recupero de Inmuebles</h3>
               <p>
-                Orientación experta para empresas de todos los tamaños en formación, cumplimiento y transacciones.
+                Orientación experta para iniciar acciones judiciales efectivas, proteger los derechos de propiedad y negociar soluciones, evitando perjuicios mayores y asegurando el cumplimiento de la ley.
               </p>
             </div>
             <div class="service-card">
               <div class="service-icon">
                 <i class="ri-briefcase-line"></i>
               </div>
-              <h3>Litigios</h3>
+              <h3>Defensa penal</h3>
               <p>
-                Representación hábil en tribunales tanto para demandantes como para demandados en diversos conflictos.
+                Representación en sistema judicial para proteger sus derechos fundamentales , brindando la defensa técnica y estratégica necesaria para el caso.
               </p>
             </div>
             <div class="service-card">
               <div class="service-icon">
                 <i class="ri-team-line"></i>
               </div>
-              <h3>Derecho Familiar</h3>
+              <h3>Derecho Civil</h3>
               <p>
-                Asesoramiento compasivo para divorcios, custodia y otros asuntos legales relacionados con la familia.
+                Asesoramiento para proteger derechos e intereses privados, ofreciendo asesoramiento técnico y representación legal experta ante disputas contractuales, familiares, de propiedad o responsabilidad civil.
               </p>
             </div>
           </div>
