--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               </div>
               <h3>Derecho Civil</h3>
               <p>
-                Asesoramiento para proteger derechos e intereses privados, ofreciendo asesoramiento técnico y representación legal experta ante disputas contractuales, familiares, de propiedad o responsabilidad civil.
+                Asesoramiento para proteger derechos e intereses privados, asesoramiento ante disputas contractuales, familiares, de propiedad o responsabilidad civil. Gestion ante aseguro automotrices.
               </p>
             </div>
           </div>
@@ -111,15 +111,13 @@
             <div class="about-text">
               <h2>Sobre Nuestra Firma</h2>
               <p>
-                Fundada en 1995, Johnson & Asociados ha crecido hasta convertirse en uno de los bufetes de abogados
-                más respetados de la región. Nuestro equipo de abogados experimentados está dedicado a proporcionar
+                Estudio Juridico Cardeilhac es un equipo de abogados experimentados está dedicado a proporcionar
                 servicios legales personalizados con integridad y excelencia.
               </p>
               <p>
                 Nos enorgullecemos de nuestro compromiso con nuestros clientes, nuestra participación en la comunidad
-                y nuestro historial de resultados exitosos incluso en los asuntos legales más complejos.
+                y nuestro historial de resultados en los asuntos legales.
               </p>
-              <button class="btn btn-primary">Conoce a Nuestro Equipo</button>
             </div>
           </div>
         </div>
